Refactoring, Created folder ViewModel and extracted all the classes from ManageViewModels.cs, Created folder Account in ViewModel and extracted all classes from Identity models. This is done in order to simplify the look and feel of the overal architecture.

--- a/StomatologijaWebApp2/WebApplication1/Views/Account/ResetPassword.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Account/ResetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ResetPasswordViewModel
+﻿@model WebApplication1.ViewModels.Account.ResetPasswordViewModel
 @{
     ViewBag.Title = "Reset password";
 }
