--- a/StomatologijaWebApp2/WebApplication1/Views/Account/SendCode.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Account/SendCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.SendCodeViewModel
+﻿@model WebApplication1.ViewModels.Account.SendCodeViewModel
 @{
     ViewBag.Title = "Send";
 }
