--- a/StomatologijaWebApp2/WebApplication1/Views/Manage/AddPhoneNumber.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Manage/AddPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.AddPhoneNumberViewModel
+﻿@model WebApplication1.ViewModels.AddPhoneNumberViewModel
 @{
     ViewBag.Title = "Phone Number";
 }
