--- a/StomatologijaWebApp2/WebApplication1/Views/Manage/Index.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Manage/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.IndexViewModel
+﻿@model WebApplication1.ViewModels.IndexViewModel
 @{
     ViewBag.Title = "Manage";
 }
