--- a/StomatologijaWebApp2/WebApplication1/Views/Account/ExternalLoginConfirmation.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Account/ExternalLoginConfirmation.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ExternalLoginConfirmationViewModel
+﻿@model WebApplication1.ViewModels.Account.ExternalLoginConfirmationViewModel
 @{
     ViewBag.Title = "Register";
 }
