--- a/StomatologijaWebApp2/WebApplication1/Views/Account/ForgotPassword.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Account/ForgotPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ForgotPasswordViewModel
+﻿@model WebApplication1.ViewModels.Account.ForgotPasswordViewModel
 @{
     ViewBag.Title = "Forgot your password?";
 }
