--- a/StomatologijaWebApp2/WebApplication1/Views/Account/Login.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Account/Login.cshtml
@@ -1,5 +1,5 @@
-﻿@using WebApplication1.Models
-@model LoginViewModel
+﻿@using WebApplication1.ViewModels.Account
+@model WebApplication1.ViewModels.Account.LoginViewModel
 @{
     ViewBag.Title = "Log in";
 }
