--- a/StomatologijaWebApp2/WebApplication1/Views/Account/Register.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Account/Register.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.RegisterViewModel
+﻿@model WebApplication1.ViewModels.Account.RegisterViewModel
 @{
     ViewBag.Title = "Register";
 }
