--- a/StomatologijaWebApp2/WebApplication1/Views/Account/VerifyCode.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Account/VerifyCode.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.VerifyCodeViewModel
+﻿@model WebApplication1.ViewModels.Account.VerifyCodeViewModel
 @{
     ViewBag.Title = "Verify";
 }
