--- a/StomatologijaWebApp2/WebApplication1/Views/Account/_ExternalLoginsListPartial.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Account/_ExternalLoginsListPartial.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ExternalLoginListViewModel
+﻿@model WebApplication1.ViewModels.Account.ExternalLoginListViewModel
 @using Microsoft.Owin.Security
 
 <h4>Use another service to log in.</h4>
