--- a/StomatologijaWebApp2/WebApplication1/Views/Manage/ManageLogins.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Manage/ManageLogins.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.ManageLoginsViewModel
+﻿@model WebApplication1.ViewModels.ManageLoginsViewModel
 @using Microsoft.Owin.Security
 @{
     ViewBag.Title = "Manage your external logins";
