--- a/StomatologijaWebApp2/WebApplication1/Views/Manage/SetPassword.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Manage/SetPassword.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.SetPasswordViewModel
+﻿@model WebApplication1.ViewModels.SetPasswordViewModel
 @{
     ViewBag.Title = "Create Password";
 }
