--- a/StomatologijaWebApp2/WebApplication1/Views/Manage/VerifyPhoneNumber.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Manage/VerifyPhoneNumber.cshtml
@@ -1,4 +1,4 @@
-﻿@model WebApplication1.Models.VerifyPhoneNumberViewModel
+﻿@model WebApplication1.ViewModels.VerifyPhoneNumberViewModel
 @{
     ViewBag.Title = "Verify Phone Number";
 }
