Few minor styling changes

--- a/StomatologijaWebApp2/WebApplication1/Content/Css/style.css
+++ b/StomatologijaWebApp2/WebApplication1/Content/Css/style.css
@@ -638,7 +638,7 @@ section.banner-carousel {
   text-align: center;
   text-decoration: none;
   display: inline-block;
-  background: #0aabe1;
+  background: #032D3A;
   border-radius: 2px;
   -webkit-transition: .3s ease;
      -moz-transition: .3s ease;
