--- a/StomatologijaWebApp2/WebApplication1/Views/Home/LandingPage.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Home/LandingPage.cshtml
@@ -254,7 +254,7 @@
                                     <i class="fa fa-mobile"></i>
                                 </div>
                                 <div class="feature-detail wow fadeInRight" data-wow-delay=".4s">
-                                    <h4>iOS / Surface / Android</h4>
+                                    <h4>rface / Android</h4>
                                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor</p>
                                 </div>
                             </li>
