--- a/StomatologijaWebApp2/WebApplication1/Views/Home/LandingPage.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Home/LandingPage.cshtml
@@ -27,6 +27,10 @@
     <link href='http://fonts.googleapis.com/css?family=Dosis:400,600,700,800' rel='stylesheet' type='text/css'>
     <link href='http://fonts.googleapis.com/css?family=Raleway:400,300,700' rel='stylesheet' type='text/css'>
 
+    <!--FontAwesome (fa) icons will not work wihtout links-->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.1.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+
     <!--Fav and touch icons-->
     <link rel="shortcut icon" href="~/Content/Images/icons/favicon.ico">
     <link rel="apple-touch-icon" href="~/Content/Images/icons/apple-touch-icon.png">
