--- a/StomatologijaWebApp2/WebApplication1/Content/Css/style.css
+++ b/StomatologijaWebApp2/WebApplication1/Content/Css/style.css
@@ -529,7 +529,7 @@ header .app li {
   position: relative;
 }
 .banner {
-  background: url(../images/slider/slide-1.jpg) no-repeat fixed;
+  background: url(../images/download_bg.jpg) no-repeat fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
