Added Registration for a Dentist

--- a/StomatologijaWebApp2/WebApplication1/Views/Home/LandingPage.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Home/LandingPage.cshtml
@@ -112,7 +112,7 @@
 
                         <div class="download-block text-center">
                             
-                            <a href="@Url.Action("DentistRegister","Account")" class="btn btn-download">I am a dentist</a><a href="@Url.Action("Register","Account")" class="btn btn-download">I need a dentist</a>
+                            <a href="@Url.Action("Register","Dentist")" class="btn btn-download">I am a dentist</a><a href="@Url.Action("Register","Account")" class="btn btn-download">I need a dentist</a>
                         </div>
                     </div>
                 </div>
