Linked LandingPage with Facebook page, corrected few details on landing page

--- a/StomatologijaWebApp2/WebApplication1/Views/Home/LandingPage.cshtml
+++ b/StomatologijaWebApp2/WebApplication1/Views/Home/LandingPage.cshtml
@@ -111,7 +111,7 @@
                         <!--/.text-slider end-->
 
                         <div class="download-block text-center">
-                            
+
                             <a href="@Url.Action("Register","Dentist")" class="btn btn-download">I am a dentist</a><a href="@Url.Action("Register","Account")" class="btn btn-download">I need a dentist</a>
                         </div>
                     </div>
@@ -392,26 +392,41 @@
                         <div id="myCarousel1" class="carousel slide" data-ride="carousel">
                             <div class="carousel-inner">
                                 <div class="active item">
-                                    <span class="review-img">
-                                        <img src="./~/Content/Images/thumb-1.png" alt="image">
-                                    </span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <!--<span class="review-img">
+                                        <img src="/Content/Images/thumb-1.png" alt="image" style="max-height: 251px; max-width: 251px;">
+                                    </span>-->
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </p>
                                     <span class="reviewer-name">Maria Jones</span>
                                     <span class="review-comp">CEO, GRAPE Ltd.</span>
                                 </div>
                                 <div class="item">
-                                    <span class="review-img">
-                                        <img src="./~/Content/Images/thumb-1.png" alt="image">
-                                    </span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <!--<span class="review-img">
+                                        <img src="/Content/Images/thumb-1.png" alt="image" style="max-height: 251px; max-width: 251px;">
+                                    </span>-->
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </p>
                                     <span class="reviewer-name">Maria Jones</span>
                                     <span class="review-comp">CEO, GRAPE Ltd.</span>
                                 </div>
                                 <div class="item">
-                                    <span class="review-img">
-                                        <img src="./~/Content/Images/thumb-1.png" alt="image">
-                                    </span>
-                                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                                    <!--<span class="review-img">
+                                        <img src="/Content/Images/thumb-1.png" alt="image" style="max-height: 251px; max-width: 251px;">
+                                    </span>-->
+                                    <p>
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+                                        Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                                    </p>
                                     <span class="reviewer-name">Maria Jones</span>
                                     <span class="review-comp">CEO, GRAPE Ltd.</span>
                                 </div>
@@ -511,7 +526,7 @@
         </div>
     </section>
     <!-- price end -->
-    <!-- download start -->
+    <!-- download start
     <section id="download" class="downlaod">
         <div class="trans-bg">
             <div class="container">
@@ -525,47 +540,49 @@
                     </div>
                 </div>
             </div>
-        </div> <!-- /.trans-bg -->
+        </div> <!-- /.trans-bg
     </section>
-    <!-- download end -->
+        download end -->
     <!-- support start -->
     <section id="support" class="support white">
-        <div class="container">
-            <div class="row">
-                <div class="col-sm-12 text-center">
-                    <span class="sub-head wow fadeInLeft">stay close</span>
-                    <div class="title wow fadeInRight">
-                        <h2>help & support</h2>
+        <div class="trans-bg">
+            <div class="container">
+                <div class="row">
+                    <div class="col-sm-12 text-center">
+                        <span class="sub-head wow fadeInLeft" style="color: white">stay close</span>
+                        <div class="title wow fadeInRight">
+                            <h2 style="color:white">help & support</h2>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-sm-4 wow bounceInUp" data-wow-duration="1s">
+                        <div class="support-block">
+                            <span class="support-icon"><i class="fa fa-bitbucket"></i></span>
+                            <h3>Product Support</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 wow bounceInUp" data-wow-duration="2s">
+                        <div class="support-block active">
+                            <span class="support-icon"><i class="fa fa-bullhorn"></i></span>
+                            <h3>Product Support</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+                        </div>
+                    </div>
+                    <div class="col-sm-4 wow bounceInUp" data-wow-duration="3s">
+                        <div class="support-block">
+                            <span class="support-icon"><i class="fa fa-stethoscope"></i></span>
+                            <h3>Product Support</h3>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
+                        </div>
                     </div>
                 </div>
             </div>
-            <div class="row">
-                <div class="col-sm-4 wow bounceInUp" data-wow-duration="1s">
-                    <div class="support-block">
-                        <span class="support-icon"><i class="fa fa-bitbucket"></i></span>
-                        <h3>Product Support</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
-                    </div>
-                </div>
-                <div class="col-sm-4 wow bounceInUp" data-wow-duration="2s">
-                    <div class="support-block active">
-                        <span class="support-icon"><i class="fa fa-bullhorn"></i></span>
-                        <h3>Product Support</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
-                    </div>
-                </div>
-                <div class="col-sm-4 wow bounceInUp" data-wow-duration="3s">
-                    <div class="support-block">
-                        <span class="support-icon"><i class="fa fa-stethoscope"></i></span>
-                        <h3>Product Support</h3>
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim</p>
-                    </div>
-                </div>
             </div>
-        </div>
-    </section>
+</section>
     <!-- support end -->
-    <!-- subscription start -->
+    <!-- subscription start 
     <section id="subscription" class="subscription">
         <div class="trans-bg">
             <div class="container">
@@ -580,12 +597,12 @@
                                 <span class="input-group-btn wow fadeInRight">
                                     <input type="submit" value="subscribe" class="btn btn-sub">
                                 </span>
-                            </div><!-- /.input-group -->
+                            </div><!-- /.input-group ->
                         </form>
                     </div>
                 </div>
             </div>
-        </div> <!-- /.trans-bg -->
+        </div> <!-- /.trans-bg ->
     </section>
     <!-- subscription end -->
     <!-- contact start -->
@@ -728,15 +745,15 @@
                 <div class="row">
                     <div class="col-sm-12 text-center">
                         <div class="social-icon">
-                            <a href="" class="wow rollIn animated" data-wow-delay=".1s"><i class="fa fa-facebook"></i></a>
-                            <a href="" class="wow rollIn animated" data-wow-delay=".2s"><i class="fa fa-twitter"></i></a>
-                            <a href="" class="wow rollIn animated" data-wow-delay=".3s"><i class="fa fa-google-plus"></i></a>
-                            <a href="" class="wow rollIn animated" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a>
-                            <a href="" class="wow rollIn animated" data-wow-delay=".5s"><i class="fa fa-rss"></i></a>
-                            <a href="" class="wow rollIn animated" data-wow-delay=".6s"><i class="fa fa-linkedin"></i></a>
-                            <a href="" class="wow rollIn animated" data-wow-delay=".7s"><i class="fa fa-vimeo-square"></i></a>
-                            <a href="" class="wow rollIn animated" data-wow-delay=".8s"><i class="fa fa-youtube-square"></i></a>
-                            <a href="" class="wow rollIn animated" data-wow-delay=".9s"><i class="fa fa-dribbble"></i></a>
+                            <a href="https://www.facebook.com/dentiscard/" class="wow rollIn animated" target="_blank" data-wow-delay=".1s"><i class="fa fa-facebook"></i></a>
+                            <!--<a href="" class="wow rollIn animated" data-wow-delay=".2s"><i class="fa fa-twitter"></i></a>-->
+                            <!--<a href="" class="wow rollIn animated" data-wow-delay=".3s"><i class="fa fa-google-plus"></i></a>-->
+                            <!--<a href="" class="wow rollIn animated" data-wow-delay=".4s"><i class="fa fa-pinterest"></i></a>-->
+                            <!--<a href="" class="wow rollIn animated" data-wow-delay=".5s"><i class="fa fa-rss"></i></a>-->
+                            <!--<a href="" class="wow rollIn animated" data-wow-delay=".6s"><i class="fa fa-linkedin"></i></a>-->
+                            <!--<a href="" class="wow rollIn animated" data-wow-delay=".7s"><i class="fa fa-vimeo-square"></i></a>-->
+                            <!--<a href="" class="wow rollIn animated" data-wow-delay=".8s"><i class="fa fa-youtube-square"></i></a>-->
+                            <!--<a href="" class="wow rollIn animated" data-wow-delay=".9s"><i class="fa fa-dribbble"></i></a>-->
                         </div>
                         <div class="copyright">
                             <p>&copy; <span>DentisCard</span>2015, all right reserved</p>
@@ -772,90 +789,90 @@
     <script src="~/Content/js/easing.js"></script>
 
     <script>
-        $(document).ready(function() {
-        // "use strict";
-        $('#banner').parallax("50%", 0.5, true);
+        $(document).ready(function () {
+            // "use strict";
+            $('#banner').parallax("50%", 0.5, true);
             $('#feature').parallax("50%", 0.5, true);
             $('#video').parallax("50%", 0.5, true);
             $('#subscription').parallax("50%", 0.5, true);
             $('#review').parallax("50%", 0.5, true);
             $('#download').parallax("50%", 0.5, true);
-        $('#footer').parallax("50%", 0.5, true);
+            $('#footer').parallax("50%", 0.5, true);
         });
 
     </script>
 
     <script>
-      // --------Google map---------------
-         var map;
-         function initialize() {
-          // Create an array of styles.
-          var styles = [
-            {
-              stylers: [
-                { hue: "#0AABE1" },
-                { saturation: 0 }
-              ]
-            },
-            {
-              featureType: 'water',
-              stylers: [
-               { visibility: "on" },
-               { color: "#9a9efd" },
-               { weight: 2.2 },
-               { gamma: 2.54 }
-              ]
-            },
-            {
-              featureType: "road",
-              elementType: "geometry",
-              stylers: [
-                { lightness: 100 },
-                { visibility: "simplified" }
-              ]
-            },{
-              featureType: "road",
-              elementType: "labels",
-              stylers: [
-                { visibility: "off" }
-              ]
-            }
-          ];
+        // --------Google map---------------
+        var map;
+        function initialize() {
+            // Create an array of styles.
+            var styles = [
+              {
+                  stylers: [
+                    { hue: "#0AABE1" },
+                    { saturation: 0 }
+                  ]
+              },
+              {
+                  featureType: 'water',
+                  stylers: [
+                   { visibility: "on" },
+                   { color: "#9a9efd" },
+                   { weight: 2.2 },
+                   { gamma: 2.54 }
+                  ]
+              },
+              {
+                  featureType: "road",
+                  elementType: "geometry",
+                  stylers: [
+                    { lightness: 100 },
+                    { visibility: "simplified" }
+                  ]
+              }, {
+                  featureType: "road",
+                  elementType: "labels",
+                  stylers: [
+                    { visibility: "off" }
+                  ]
+              }
+            ];
 
-          // Create a new StyledMapType object, passing it the array of styles,
-          // as well as the name to be displayed on the map type control.
-          var styledMap = new google.maps.StyledMapType(styles,
-            {name: "Styled Map"});
+            // Create a new StyledMapType object, passing it the array of styles,
+            // as well as the name to be displayed on the map type control.
+            var styledMap = new google.maps.StyledMapType(styles,
+              { name: "Styled Map" });
 
-          // Create a map object, and include the MapTypeId to add
-          // to the map type control.
-          var losAngeles = new google.maps.LatLng(33.8030716,-118.0725641);
-          var mapOptions = {
-            zoom: 13,
-            center: losAngeles,
-            mapTypeControlOptions: {
-              mapTypeIds: [google.maps.MapTypeId.ROADMAP, 'map_style']
-            },
-            scrollwheel: false,
-          };
-          var map = new google.maps.Map(document.getElementById('map'),
-            mapOptions);
+            // Create a map object, and include the MapTypeId to add
+            // to the map type control.
+            var losAngeles = new google.maps.LatLng(33.8030716, -118.0725641);
+            var mapOptions = {
+                zoom: 13,
+                center: losAngeles,
+                mapTypeControlOptions: {
+                    mapTypeIds: [google.maps.MapTypeId.ROADMAP, 'map_style']
+                },
+                scrollwheel: false,
+            };
+            var map = new google.maps.Map(document.getElementById('map'),
+              mapOptions);
 
 
-          //Associate the styled map with the MapTypeId and set it to display.
-          map.mapTypes.set('map_style', styledMap);
-          map.setMapTypeId('map_style');
+            //Associate the styled map with the MapTypeId and set it to display.
+            map.mapTypes.set('map_style', styledMap);
+            map.setMapTypeId('map_style');
 
-          // To add the marker to the map, use the 'map' property
-          var image = '~/Content/Images/map_icon_3.png';
-          var marker = new google.maps.Marker({
-              position: losAngeles,
-              map: map,
-              title:"GRAPE App Store!",
-              icon: image
-          });
+            // To add the marker to the map, use the 'map' property
+            var image = '~/Content/Images/map_icon_3.png';
+            var marker = new google.maps.Marker({
+                position: losAngeles,
+                map: map,
+                title: "GRAPE App Store!",
+                icon: image
+            });
 
-         }
+        }
 
     </script>
 
